<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:orientation="horizontal"
    android:gravity="bottom">

    <Button

        android:id="@+id/button32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/inter_bold"
        android:paddingTop="21dp"
        android:text="@string/house"
        android:textColorHint="@color/black" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/authorization"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/inter_bold"
        android:paddingTop="21dp"
        android:text="@string/сhart"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_bold"
        android:background="@android:color/transparent"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:drawablePadding="8dp"
        android:text="@string/coin"
        android:textColorHint="@color/black" />


    <Button
        android:id="@+id/button24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/inter_bold"
        android:paddingTop="21dp"
        android:text="@string/gearWheel"
        android:textColorHint="@color/black" />
</LinearLayout>
