<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lime"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="575dp"
            android:layout_height="305dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ananas_black" />

        <TextView
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/personalData"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/greeting_text_view"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/name"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/birthday_edit_text"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/Data"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:text="@string/register"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/link_to_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/authorization1"
            android:gravity="center"
            android:textColor="@color/blue"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
